--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<ul>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-			</ul>
+			<h1>Original Trombones</h1>
+			<nav>
+				<ul class="navegation">
+					<li>Features</li>
+					<li>How It Works</li>
+					<li>Pricing</li>
+				</ul>
+			</nav>
 		</header>
 		<main></main>
 		<footer></footer>
