Add HTML elements, no style yet

--- a/index.html
+++ b/index.html
@@ -17,7 +17,58 @@
 				</ul>
 			</nav>
 		</header>
-		<main></main>
+		<main>
+			<div class="introEmail">
+				<p>Handcrafted, home-made masterpieces</p>
+				<form action="">
+					<label for=""></label>
+					<input
+						type="email"
+						name=""
+						id=""
+						placeholder="Enter your email address"
+						required
+					/>
+					<br />
+					<input type="submit" value="GET STARTED" />
+				</form>
+			</div>
+			<div class="mainFeatures">
+				<div class="feature">
+					<img src="" alt="" />
+					<div class="featureText">
+						<h2>Premium Materials</h2>
+						<p>
+							Our trombones use the shiniest brass which is sourced locally.
+							This will increase the longevity of your purchase.
+						</p>
+					</div>
+				</div>
+				<div class="feature">
+					<img src="" alt="" />
+					<div class="featureText">
+						<h2>Fast Shipping</h2>
+						<p>
+							We make sure you receive your trombone as soon as we have finished
+							making it. We also provide free returns if you are not satisfied.
+						</p>
+					</div>
+				</div>
+				<div class="feature">
+					<img src="" alt="" />
+					<div class="featureText">
+						<h2>Quality Assurance</h2>
+						<p>
+							For every purchase you make, we will ensure there are no damages
+							or faults and we will check and test the pitch of your instrument.
+						</p>
+					</div>
+				</div>
+				<div class="youtubeEmbed">
+					<iframe src="http://youtu.be/y8Yv4pnO7qc" frameborder="0"></iframe>
+				</div>
+			</div>
+		</main>
 		<footer></footer>
 	</body>
 </html>
