--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 		<header>
 			<h1>Original Trombones</h1>
 			<nav>
-				<ul class="navegation">
-					<li>Features</li>
-					<li>How It Works</li>
-					<li>Pricing</li>
+				<ul class="navigation">
+					<li class="navItem">Features</li>
+					<li class="navItem">How It Works</li>
+					<li class="navItem">Pricing</li>
 				</ul>
 			</nav>
 		</header>
