Add background color and logo

--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Original Trombones Shop</title>
 		<link rel="stylesheet" href="styles.css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Syne&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<header>
-			<h1>Original Trombones</h1>
+			<img
+				class="logoImage"
+				src="resources/original_trombones.png"
+				alt=""
+				srcset=""
+			/>
 			<nav>
 				<ul class="navigation">
 					<li class="navItem">Features</li>
