--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		/>
 	</head>
 	<body>
-		<header>
+		<header id="header">
 			<img
-				class="logoImage"
+				id="header-img"
 				src="resources/original_trombones.png"
 				alt=""
 				srcset=""
@@ -78,6 +78,24 @@
 				</div>
 			</div>
 		</main>
+		<h1>Hey</h1>
+
+		<h1>Hey</h1>
+
+		<h1>Hey</h1>
+
+		<h1>Hey</h1>
+
+		<h1>Hey</h1>
+
+		<h1>Hey</h1>
+
+		<h1>Hey</h1>
+
+		<h1>Hey</h1>
+
+		<h1>Hey</h1>
+
 		<footer></footer>
 	</body>
 </html>
