Make nav clickable

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 				alt=""
 				srcset=""
 			/>
-			<nav>
+			<nav id="nav-bar">
 				<ul class="navigation">
-					<li class="navItem">Features</li>
-					<li class="navItem">How It Works</li>
-					<li class="navItem">Pricing</li>
+					<li class="nav-link"><a href="index.html#features">Features</a></li>
+					<li class="nav-link">How It Works</li>
+					<li class="nav-link">Pricing</li>
 				</ul>
 			</nav>
 		</header>
@@ -42,7 +42,7 @@
 					<input type="submit" value="GET STARTED" />
 				</form>
 			</div>
-			<div class="mainFeatures">
+			<div class="features" id="features">
 				<div class="feature">
 					<img src="" alt="" />
 					<div class="featureText">
