--- a/index.html
+++ b/index.html
@@ -74,7 +74,15 @@
 					</div>
 				</div>
 				<div class="youtubeEmbed">
-					<iframe src="http://youtu.be/y8Yv4pnO7qc" frameborder="0"></iframe>
+					<iframe
+						id="video"
+						width="560"
+						height="315"
+						src="https://www.youtube.com/embed/y8Yv4pnO7qc"
+						frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen
+					></iframe>
 				</div>
 			</div>
 		</main>
@@ -97,5 +105,6 @@
 		<h1>Hey</h1>
 
 		<footer></footer>
+		<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 	</body>
 </html>
