Style email input form

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 			href="https://fonts.googleapis.com/css2?family=Syne&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<header id="header">
@@ -29,17 +33,23 @@
 		<main>
 			<div class="introEmail">
 				<p>Handcrafted, home-made masterpieces</p>
-				<form action="">
-					<label for=""></label>
+				<form id="form" action="">
+					<label for="email"></label>
 					<input
+						class="inputEmail"
 						type="email"
 						name=""
-						id=""
+						id="email"
 						placeholder="Enter your email address"
 						required
 					/>
 					<br />
-					<input type="submit" value="GET STARTED" />
+					<input
+						id="button"
+						class="inputEmail"
+						type="submit"
+						value="GET STARTED"
+					/>
 				</form>
 			</div>
 			<div class="features" id="features">
